@@ -21,6 +21,8 @@ export(setverbose)
 # Multi-level models:
 export(ml_tsdlvm1)
 export(ml_ts_lvgvar)
+export(ml_gvar)
+export(ml_var)
 export(ml_lvm)
 export(ml_lnm)
 export(ml_rnm)
